fix dark mode remember and hamburger overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -326,4 +326,5 @@ div:has(.guess-background) + div:has(.guess-background) {
 
 .hamburger-react {
   z-index: 99;
+  transform: none !important;
 }
